[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Evil-Dice.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Evil_Cube.gd" type="Script" id=2]
[ext_resource path="res://Scenes/EvilBullet.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 17.0

[sub_resource type="CircleShape2D" id=2]
radius = 18.0278

[sub_resource type="CircleShape2D" id=3]
radius = 203.002

[node name="Evil_Cube" type="KinematicBody2D"]
collision_layer = 15
collision_mask = 15

[node name="Evil-Dice" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 2 )
bullet = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AI"]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -3 )
shape = SubResource( 2 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="AI" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="AI" method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="PlayerDetectionZone" to="AI" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="AI" method="_on_PlayerDetectionZone_body_exited"]
